--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: Inter;
+  src: url(../public/assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+*{
+    margin: 0;padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    border: none;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    font-family: 'Inter';
+    font-style: normal;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @media (min-width: 1400px){
+    .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+      max-width: 1180px !important;
+    }
   }
-  to {
-    transform: rotate(360deg);
+  
+
+  a{
+    text-decoration: none !important;
   }
-}
+  
+  body {
+    background-color: #2C2B41 !important;
+    color: #ffffff !important;
+  }
