--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,20 @@
     font-style: normal;
   }
 
+  h1,h2,h3,h4,h5,p{
+    margin: 0px;
+    padding: 0px;
+  }
+
   @media (min-width: 1400px){
     .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
       max-width: 1180px !important;
     }
   }
   
+  ::selection{
+    background-color: #212036;
+  }
 
   a{
     text-decoration: none !important;
